-bug#0000906: Every Tenth Host Does Not Show on Tree During Console Edit 
-bug#0000907: Sorting of Datasources, when interface numbers are used without leading zeros interfaces are incorrectly sorted 
-bug#0000921: cactid and ping.pl script error
-bug#0000927: Classic export does not recognize thumbnail columns properly
-bug#0000925: Support for host_* variables in the legend
-bug#0000957: Script Server Output's Beginning/Trailing Data During "Include" Causing a Synchronization Issue 
-bug: ss_sql.php was never tested and causes the script server to crash.
-bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
-bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
-bug: Cacti does not have any way to mass add devices, graphs, tree's and permissions.
-bug: Correct index error when creating graphs when you have no hosts on your system.
-bug: More recent versions of net-snmp broke SNMP walk functions.
-bug: Adjust for problematic responses from some SNMPT Agents.

0.8.6j
-bug#0000842: SNMPv3 password field does not check if entered passwords match.
-bug#0000848: Fix "PHP Script Server communications lost" error in the poller under high network load.
-bug#0000859: User log "purge" now keeps the last successful login.
-bug#0000861: Use downed host detection even when the SNMP community is blank.
-bug#0000864: Apply natural sort to graph items in the tree.
-bug#0000867: Apply various cleanups to poller.php and lib/poller.php.
-bug#0000870: Add sorting to the graph templates list on the "Change Graph Template" page.
-bug#0000877: Fix issue that caused PHP 5.2.0 to break the Windows cmd.php poller.
-bug#0000882: Add "collapsible" branches to the graph tree editor.
-bug#0000883: Fix exploit in cmd.php with register_argc_argv enabled in PHP.
-bug#0000884: Add bottom navigation bar to graph viewing.
-bug#0000885: Fix issue causing spaces to be removed when importing/exporting data input methods.